@@ -32,7 +32,11 @@ int main(int argc,char **argv)
   char DB[1024];
   exec sql end declare section;
   int done=0;
+  FILE *dbgs;
   
+  if ((dbgs = fopen("log", "w")) != NULL)
+                ECPGdebug(1, dbgs);
+
   snprintf(QUERY,sizeof QUERY,"select * from %s",argc>1 && argv[1][0]?argv[1]:"pg_tables");
 
   exec sql whenever sqlerror do error();
@@ -179,5 +183,9 @@ int main(int argc,char **argv)
   exec sql close MYCURS;
   
   exec sql deallocate descriptor MYDESC;
+
+  if (dbgs != NULL)
+       fclose(dbgs);
+
   return 0;
 }
